--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+	<header></header>
+	<main>
 	<h1 id="up"><mark>Що таке кросфіт? Історія, програма, користь, переваги.</mark></h1>
 	<ul>
 		<li><a href="#what's-happened" class="link">Що таке кросфіт</a></li>
@@ -115,7 +117,10 @@
 		</ul>
 	</div>
 	<br>
+		</main>
+	<footer>
 	<a target="_blank" title="Офіційний сайт CrossFit" href="https://www.crossfit.com/">www.crossfit.com</a>
+		</footer>
 
 
 </body>
