--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -8,14 +8,12 @@
 </head>
 
 <body>
-	<header></header>
-	<main>
 	<h1 id="up"><mark>Що таке кросфіт? Історія, програма, користь, переваги.</mark></h1>
 	<ul>
-		<li><a href="#what's-happened" class="link">Що таке кросфіт</a></li>
+		<li><a href="#what-is-happened" class="link">Що таке кросфіт</a></li>
 		<li><a href="#history">Історія виникнення</a></li>
 		<li><a href="#program">Програма тренувань</a></li>
-		<li><a href="#Basic-exercises">Основні вправи у кросфіті</a></li>
+		<li><a href="#basic-exercises">Основні вправи у кросфіті</a></li>
 		<li><a href="#benefit">Користь та переваги</a></li>
 	</ul>
 	<div>Сьогодні у тренажерному залі доступні різноманітні тренувальні методики.З давалося б, що знайти незвичайне,
@@ -24,11 +22,12 @@
 		обговорення серед спеціалістів, інструкторів, професійних атлетів, лікарів. Спочатку вона проводилася для
 		підготовки пожежників у США, але швидко набула всесвітньої популярності й поза професією. Щороку проводиться
 		велика кількість турнірів, а також чемпіонати світу.</div>
-	<br>
+
 
 	<img src="img/7a6bc9545b31775f6b06c6a5b1ae5282.jpg" alt="картинка">
 	<h2>Що таке кросфіт?</h2>
-	<div id="what's-happened">Це круговий тренінг, що визначається виконанням конкретного комплексу завдань за найменший
+	<div id="what-is-happened">Це круговий тренінг, що визначається виконанням конкретного комплексу завдань за
+		найменший
 		проміжок часу.</div>
 	<h3><mark>Він суттєво відрізняється від звичайних кругових тренувань:</mark></h3>
 	<div>
@@ -42,7 +41,7 @@
 			и тренера. Грамотно распределенные нагрузки – залог отличной физической формы и хорошего здоровья.</p>
 	</div>
 	<h2 id="history">Історія виникнення</h2>
-	<img height="300" src="img/Greg.jpeg" alt="картинка">
+	<img height="300" src="img/greg.jpeg" alt="картинка">
 	<div>
 		<p>У 1996 році відкрився перший, призначений для кросфіту, зал. Усього через 5 років, у 2001 році, він був
 			запатентований компанією Кросфіт Inc. Засновником став тренер із гімнастики Грег Глассман. У наступні 15
@@ -63,8 +62,8 @@
 			бути у добрій формі. Є навіть Кросфіт розроблений саме для дітей. Важливо, що спочатку тренінг може
 			бути жорстким, тому приступати до занять необхідно поступово.</p>
 	</div>
-	<img src="img/История-кроссфита.jpg" alt="картинка">
-	<h2 id="Basic-exercises">Основні вправи у кросфіті</h2>
+	<img src="img/history-crossfit.jpg" alt="картинка">
+	<h2 id="basic-exercises">Основні вправи у кросфіті</h2>
 	<div>
 		<ul>
 			<li>
@@ -116,11 +115,8 @@
 				здоров'я, що відмінно підходить для непрофесіоналів.</li>
 		</ul>
 	</div>
-	<br>
-		</main>
-	<footer>
+
 	<a target="_blank" title="Офіційний сайт CrossFit" href="https://www.crossfit.com/">www.crossfit.com</a>
-		</footer>
 
 
 </body>
