--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -87,7 +87,7 @@
 				році у віці 23 років виграє свій перший титул «Містер Олімпія» у Нью-Йорку.У 1983 році отримав
 				громадянство США, зберігає громадянство Австрії.</p>
 		</div>
-		<h2 id="bodybuilding"><mark>Кар'єра <a
+		<h2 id="bodybuilding"><mark>Кар'єра <a target="_blank"
 					href="https://uk.wikipedia.org/wiki/%D0%9A%D1%83%D0%BB%D1%8C%D1%82%D1%83%D1%80%D0%B8%D0%B7%D0%BC">культуриста</a></mark>
 		</h2>
 		<div>
