--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -213,7 +213,7 @@
 				<li><a target="_blank" href="https://h-ddnipro.com.ua/inventory/310161/pan-america-1250">Harley Davidson
 						Pan-America</a>
 				</li>
-				<li>Harley Davidson Bronx 975</a></li>
+				<li><a>>Harley Davidson Bronx 975</a></li>
 				<li><a target="_blank"
 						href="https://motorcycle.co.ua/moto/harley-davidson-sportster-1200-tekhnichni-kharakteristiki"></a>Harley
 					Davidson Sportster Iron 1200</li>
