--- a/lesson_4/index.html
+++ b/lesson_4/index.html
@@ -20,11 +20,12 @@
 			<li><a href="#production">Виробництво мотоциклів</a></li>
 			<li><a href="#models">Модельний ряд</a></li>
 			<li><a href="#new-models">Топ 4 нових моделей</a></li>
-
 		</ul>
 		<h2 id="histori">Історія</h2>
-		<div>
+		<div class="histori-harley">
 			<img height="400" src="img/harley_2.jpg" alt="imeg1">
+			<ul>...</ul>
+
 			<p>На початку 1901 року Вільям Сільвестр Харлі (William Sylvester Harley), якому було всього 22 роки,
 				розробив
 				проект для маленького двигуна об'ємом 115 см 3 . Наступні два роки Харлі та його друг дитинства Артур
@@ -36,7 +37,8 @@
 			<p>Після цього негайно почалася робота над новим, сучаснішим мотоциклом. Цей перший «справжній» мотоцикл
 				Harley-Davidson мав двигун об'ємом 405 см вагою трохи менше 13 кг. Нова просунута рама була аналогічна
 				рамі
-				мотоцикла 1903 року Milwaukee Merkel (сконструйованого Джозефом Меркелем, творцем Flying Merkel).
+				мотоцикла 1903 року <a href="">Milwaukee Merkel</a> (сконструйованого Джозефом Меркелем, творцем Flying
+				Merkel).
 				Трубчаста
 				рама та двигун більшого об'єму зробили нову модель Харлі-Девідсон вже не велосипедом із мотором, а
 				мотоциклом у сучасному розумінні. У розробці нового двигуна допоміг інженер Оле Евінруд, один з піонерів
@@ -49,7 +51,9 @@
 			</p>
 			<p>Усі мотоцикли, зроблені в 1905 і 1906 роках, були з одноциліндровими двигунами об'ємом 440 см3. У лютому
 				1907
-				року на виставці Чикаго був вперше показаний мотоцикл з двигуном V-Twin (880 см³) потужністю близько 7
+				року на виставці <span class="text">Чикаго був вперше показаний мотоцикл</span> з двигуном V-Twin (880
+				см³)
+				потужністю близько 7
 				кінських сил. Ці мотоцикли були майже вдвічі потужнішими за перші одноциліндрові. Максимальна швидкість
 				становила близько 97 км/год. Між 1908 та 1909 продажі мотоциклів зросли з 450 штук до 1149.</p>
 			<p>У 1911 році було випущено вдосконалену модель двигуна V-twin. Новий двигун мав механічне керування
@@ -62,16 +66,20 @@
 				компанію Indian. У 1914 році продажі досягли позначки 16 284 машин.</p>
 		</div>
 		<h2 id="brend"><mark>Брендування</mark></h2>
-		<div>
-			<p>Компанія проєктує, виготовляє продає суперважкі мотоцикли, призначені для їзди по шосе. Мотоцикли
+		<div class="brend-company">
+			<p style="color: aquamarine;">Компанія проєктує, виготовляє продає суперважкі мотоцикли, призначені для їзди
+				по шосе. Мотоцикли
 				«Harley-Davidson» (також широко відомі як «Harley») мають характерний дизайн та характерний гучний
 				вихлоп.
-				За винятком сучасних моделей сімейства VRSC, поточний дизайн «Harley» відображає класичний стиль
+				За винятком <a href="">сучасних моделей сімейства VRSC</a>, поточний дизайн «Harley» відображає
+				класичний стиль
 				мотоциклів.
 				Спроби «Harley-Davidson» утвердитися на ринку «легких» мотоциклів мали обмежений успіх і були значною
 				мірою
 				припинені після 1978 року, після продажу своїх італійських філій «Aermacchi».</p>
-			<p>Борючись за ринок, «Harley-Davidson» підтримує лояльність спільноти власників мотоциклів, підтримує бренд
+			<p>Борючись за ринок, <span class="text">«Harley-Davidson»</span> підтримує лояльність спільноти власників
+				мотоциклів,
+				підтримує бренд
 				через клуби, події та музеї. Для створення «касти» прихильників бренду компанія формує своєрідний стиль
 				цінностей, інтересів і життя серед своїх прихильників. Для цього, окрім мототехніки, виробляють посуд,
 				одяг,
@@ -79,7 +87,15 @@
 				магазинах компанії по усьому світу. Ліцензування бренду і логотипу «Harley-Davidson» склали 40 млн. $
 				(0,8
 				%) від чистої виручки компанії в 2010 році.</p>
+			<div class="text-lorem">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laudantium amet fugiat? Officia quos
+					corporis nihil? Sunt, quo optio quam harum eaque praesentium illo? At tenetur recusandae nesciunt
+					debitis culpa.</p>
+			</div>
 		</div>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, explicabo quibusdam vitae culpa harum,
+			temporibus aliquid deleniti sed fugiat maxime placeat ut natus laborum nam alias illum, cupiditate at modi!
+		</p>
 		<h2 id="production"><mark>Виробництво мотоциклів</mark></h2>
 		<div>
 			<p>У другому кварталі 2014 року компанія Harley-Davidson випустила 90 218 мотоциклів. Основним ринком були
@@ -207,9 +223,9 @@
 
 		</div>
 		<h2 id="new-models">Топ 4 нових моделей</h2>
-		<div>
+		<div class="list">
 
-			<ul>
+			<ul class="list-top">
 				<li><a target="_blank" href="https://h-ddnipro.com.ua/inventory/310161/pan-america-1250">Harley Davidson
 						Pan-America</a>
 				</li>
@@ -222,6 +238,7 @@
 						LiveWir</a></li>
 			</ul>
 		</div>
+		<p>I'm p</p>
 	</main>
 	<footer></footer>
 </body>
