--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -113,7 +113,7 @@
 
 
 
-		<!-- --------------------------Макет 1------------------------------------- -->
+		<!---------------------------- Макет 1 --------------------------------------->
 		<div class="layout-part1">
 			<div>
 				<h2 class="title1">Why Us For International Business Management Consulting!</h2>
@@ -133,7 +133,7 @@
 			</div>
 		</div>
 
-		<!-- ------------------------------Макет 2-------------------- -->
+		<!-------------------------------- Макет 2 ---------------------->
 		<div class="layout-part2">
 			<div>
 				<h2 class="title3">Project Information</h2>
