--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Gabarito:regular,500,600,900&display=swap" rel="stylesheet">
-	<title>lesson_5</title>
+	<title>lesson 5</title>
 </head>
 
 <body>
@@ -22,8 +22,10 @@
 				<li><a href="#teaching">Навчання</a></li>
 				<li><a href="#">Догляд</a></li>
 			</ul>
+		</div>
+		<div>
 			<img height="300" src="img/1661469855_23-krasivosti-pro-p-ulibayushchiisya-pitbul-krasivo-30.jpg"
-				alt="imeg1">
+				alt="pitbull">
 		</div>
 		<div class="istoria">
 			<h2 id="histori">Історія</h2>
@@ -54,7 +56,9 @@
 			</div>
 		</div>
 		<div class="opyus">
-			<img height="600" src="img/1662500365_1-oir-mobi-p-sobaka-porodi-pitbul-instagram-1.jpg" alt="imeg2">
+			<div><img height="600" src="img/1662500365_1-oir-mobi-p-sobaka-porodi-pitbul-instagram-1.jpg"
+					alt="pitbull-dog">
+			</div>
 			<h2 id="description"> Опис</h2>
 			<p><span>Американський пітбультер'єр має мускулисту, спортивну статуру, характерну для собак такого
 					типу.</span> Він
@@ -86,8 +90,10 @@
 
 		</div>
 		<div class="training">
-			<img height="670" src="img/1668685662_damion-club-p-pitbul-s-nekupirovannimi-ushami-instagram-1.jpg"
-				alt="imeg3">
+			<div>
+				<img height="670" src="img/1668685662_damion-club-p-pitbul-s-nekupirovannimi-ushami-instagram-1.jpg"
+					alt="dog">
+			</div>
 			<h2 id="teaching">Навчання</h2>
 			<p>Цим вихованцям вкрай важлива рання соціалізація, оскільки, незважаючи на свою дружелюбність, до
 				незнайомців вони ставляться з обережністю. Також, необхідно вивчати команди та домагатися залізного
@@ -99,7 +105,7 @@
 				не треба кричати - просто запасіться терпінням і завзятістю.</p>
 		</div>
 		<div class="doglyad">
-			<img height="550" src="img/maxresdefault-2.jpg" alt="imeg4">
+			<div><img height="550" src="img/maxresdefault-2.jpg" alt="american-pit-bull"></div>
 			<h2 id="care">Догляд</h2>
 			<p>Так як це короткошерсті собаки, у цьому відношенні проблеми з доглядом у вас не буде. Обов'язково
 				потрібно стежити за чистотою вух та очей, вчасно підрізати пазурі, і купати вихованця щонайменше один
